addressbook-main/manifest/deployment.yaml
# Complete Manifest Where in single yml we defined Deployment & Service for SpringApp & PVC(with default  StorageClass),ReplicaSet & Service For Mongo.
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: directory
  name: addressbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: addressbook
  template:
    metadata:
      name: addressbook
      labels:
        app: addressbook
    spec:
      containers:
        - name: addressbook-container
          image: 975050054743.dkr.ecr.us-east-1.amazonaws.com/team34c:1.1.0
          ports:
            - containerPort: 8080
